--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
     <section id="partners" class="image-gallery">
         <h2>Somos Partners</h2>
         <div class="image-container">
-            <img src="img/p_shopify.png" alt="Descripción de la imagen 1">
-            <img src="img/logo_partner_tiendanube.png" alt="Descripción de la imagen 2">
-            <img src="img/woocommerce-parth.png" alt="Descripción de la imagen 3">
-            <img src="img/partner_vtex_2x-1.png" alt="Descripción de la imagen 4">
-            <img src="img/magento.png" alt="Descripción de la imagen 5">
-            <img src="img/ML_Cons.png" alt="Descripción de la imagen 5">
+            <img src="img/p_shopify.png" alt="Shopify">
+            <img src="img/logo_partner_tiendanube.png" alt="Tienda Nube">
+            <img src="img/woocommerce-parth.png" alt="Woocommerce">
+            <img src="img/partner_vtex_2x-1.png" alt="Vtex">
+            <img src="img/magento.png" alt="Magento">
+            <img src="img/ML_Cons.png" alt="Mercado Libre">
         </div>
     </section>
 
